# esp32-aws-iot

./: .gitignore  .travis.yml  Makefile  README.md  library.properties  platformio.ini
.github/workflows/: test.yml
examples/iam/: thing_policy_full_permissions.json
examples/pubSubTest/: README.md  config.h-dist  pubSubTest.ino
src/: AWS_IOT.cpp  AWS_IOT.h  network_mbedtls_wrapper.c
tools/: Pipfile  README.md  create_thing.py
tools/create_thing/: README.md  pyproject.toml
tools/create_thing/create_thing/: create_thing.py
tools/create_thing/tests/: test_create_thing.py
