[tool.poetry]
name = "create_thing"
version = "0.1.0"
description = "create AWS IoT things to use with embedded devices"
authors = ["Jan Delgado <jdelgado@gmx.net>"]

[tool.poetry.scripts]
create_thing = 'create_thing.create_thing:run'

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
